# rgb-assets

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  client_page.py  docker-compose.yml  minter_page.py  pyproject.toml  services.sh  webapp.py
mints/: mint_example.json
notebooks/: rgb-lib.ipynb
rgb_assets/: api.py  client.py  config.py  minter.py  models.py  wallet_helper.py  wallet_service.py
rgb_assets/tests/: conftest.py  test_client.py  test_keymanager.py  test_minter.py  test_wallet.py  utils.py
rgb_assets/tests/data/: nft_definition-2.json  nft_definition.json
rgbassets/: schemas.py  wallet.py
