[tool.poetry]
name = "rgbassets"
version = "0.1.0"
description = "A framework to issue RBG-21 non-fungible assets"
authors = ["waltermaffy <walterm21@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
fastapi = "^0.89.1"
pytest = "^7.2.0"
rgb-lib = "^0.1.2"
qrcode = "^7.3.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mint = "rgb_assets.mint.main:main"
cashu = "cashu.wallet.cli.cli:cli"
wallet-test = "tests.test_wallet:test"
