[tool.poetry]
name = "rgbassets"
version = "0.1.0"
description = "A framework to issue RBG-21 non-fungible assets"
authors = ["waltermaffy <walterm21@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9.2"
streamlit = "^1.16.0"
fastapi = "^0.89.1"
pytest = "^7.2.0"
rgb-lib = "^0.2.0"
qrcode = "^7.3.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mint = "rgb_assets.minter:main"
wallet-helper = "rgb_assets.wallet_helper:main"
